Add graphs for frequency and duration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v13:19.+'
     compile files('libs/bolts.jar')
+    compile files('libs/GraphView-3.1.2.jar')
 }
