--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v13:19.+'
     compile files('libs/bolts.jar')
     compile files('libs/GraphView-3.1.2.jar')
+    compile files('libs/Parse-1.5.1.jar')
 }
