--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.bklimt.babywatch"
+        applicationId "com.bklimt.surgetracker"
         minSdkVersion 15
         targetSdkVersion 18
         versionCode 1
