--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .gradle
-/local.properties
-/.idea/workspace.xml
 .DS_Store
-/build
+/android/local.properties
+/android/.idea/workspace.xml
+/android/build
