Add come cloud code and fix emails

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-.gradle
+*.swp
 .DS_Store
+
+.gradle
 /android/local.properties
 /android/.idea/workspace.xml
 /android/build
+
+/parse/config/global.json
